--- a/ui/html/pages/about.html
+++ b/ui/html/pages/about.html
@@ -1,5 +1,6 @@
-{{define "Main"}}
+{{define "content"}}
 <article>
+    <h2>about page</h2>
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. In qui minima similique aut provident rem sit nobis labore, voluptatum ab quod, vitae iusto. Doloremque minima
     similique expedita quas eius pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut harum est laboriosam debitis praesentium et animi assumenda sunt aspernatur
     non quidem blanditiis nobis voluptate ex ullam delectus inventore, nemo quam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis modi incidunt accusamus officia,
