--- a/ui/html/pages/form.html
+++ b/ui/html/pages/form.html
@@ -1,4 +1,5 @@
 {{define "content"}}
+<h2>Form page</h2>
 <form action="">
     <label for="name">Name :</label>
     <input type="text" name="user_name" id="name" required />
