--- a/ui/html/pages/form.html
+++ b/ui/html/pages/form.html
@@ -1,6 +1,6 @@
 {{define "content"}}
 <h2>Form page</h2>
-<form action="">
+<form action="/forminput" method="post" autocomplete="on">
     <label for="name">Name :</label>
     <input type="text" name="user_name" id="name" required />
     <br />
@@ -20,6 +20,6 @@
     <input type="password" name="user_password" id="password" required />
     <br />
 
-    <button type="submit">Send</button>
+    <button type="submit">Submit</button>
 </form>
 {{end}}
